# src/routes/auth.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+
+import { login } from "../controller/auth";
+
+const authRouter = Router();
+
+authRouter.post("/login", login);
+
+export default authRouter;
