# src/routes/books.ts
@@ -8,14 +8,15 @@ import {
   deleteBook,
   getBookStats,
 } from "../controller/books";
+import { auth } from "../middleware/authMiddleware";
 
 const bookRouter = Router();
 
-bookRouter.get("/", getAllBooks);
-bookRouter.post("/", addBook);
-bookRouter.put("/:id", updateBook);
-bookRouter.delete("/:id", deleteBook);
-bookRouter.get("/stats", getBookStats);
-bookRouter.get("/filter/:page", getFilteredBooks);
+bookRouter.get("/", auth, getAllBooks);
+bookRouter.post("/", auth, addBook);
+bookRouter.put("/:id", auth, updateBook);
+bookRouter.delete("/:id", auth, deleteBook);
+bookRouter.get("/stats", auth, getBookStats);
+bookRouter.get("/filter/:page", auth, getFilteredBooks);
 
 export default bookRouter;
